--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
         
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="header">
                 <nav>
                     <ul class="nav nav-pills pull-right">
